[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinycoder"
version = "0.1.0"
authors = [
    { name="Nipun Kumar" },
]
description = "A tiny AI coding assistant designed to be used from command-line."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
  "pydantic",
  "langchain-core",
  "langchain-community",
  "langchain-google-genai",
  "langchain-ollama",
  "langchain-openai",
  "py-jsonl",
  "requests",
  "bashlex",
]

[project.urls]
"Homepage" = "https://github.com/n-k/tinycoder"
"Bug Tracker" = "https://github.com/n-k/tinycoder/issues"

[project.scripts]
tinycoder = "tinycoder:main"
